Fix commit 429762 by djarvie: do not write bogus data as DTEND value, but skip the property altogether.

The readEvent() has been adapted in case when the DTEND is not in the event, it will be initialized with the same value as DTSTART then.

BUG:124820


svn path=/branches/KDE/3.5/kdepim/; revision=600170